--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/products-api
+spring.datasource.url= jdbc:postgresql://localhost:5432/products
 spring.datasource.username=postgres
-spring.datasource.password=Ada0704@
+spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 
 Spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
